manifests/prometheus-1.3.5.tgz-manifest.yaml
---
# Source: prometheus/templates/alertmanager/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-prometheus-alertmanager 
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 2.52.1
    helm.sh/chart: prometheus-1.3.5
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: alertmanager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: prometheus
      app.kubernetes.io/component: alertmanager
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9093
        - port: 80
---
# Source: prometheus/templates/server/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-prometheus-server
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 2.52.1
    helm.sh/chart: prometheus-1.3.5
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: prometheus
      app.kubernetes.io/component: server
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9090
        - port: 80
---
# Source: prometheus/templates/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-prometheus-alertmanager"
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 0.27.0
    helm.sh/chart: prometheus-1.3.5
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: alertmanager
spec:
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: alertmanager
---
# Source: prometheus/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-prometheus-server
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 2.52.1
    helm.sh/chart: prometheus-1.3.5
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: server
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  externalTrafficPolicy: "Cluster"
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: server
---
# Source: prometheus/templates/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-prometheus-server
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 2.52.1
    helm.sh/chart: prometheus-1.3.5
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: server
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: prometheus
      app.kubernetes.io/component: server
  template:
    metadata:
      annotations:
        checksum/configmap: 70ba1d1bedf96cab63bca7cd6d14acd686e5bf1c58b1e2e39c8e8a5102118f9b
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/version: 2.52.1
        helm.sh/chart: prometheus-1.3.5
        app.kubernetes.io/part-of: prometheus
        app.kubernetes.io/component: server
    spec:
      serviceAccountName: my-release-prometheus-server
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: prometheus
                    app.kubernetes.io/component: server
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: prometheus
          image: docker.io/bitnami/prometheus:2.52.1-debian-12-r1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          args:
            - "--config.file=/opt/bitnami/prometheus/conf/prometheus.yaml"
            - "--storage.tsdb.path=/bitnami/prometheus/data"
            - "--storage.tsdb.retention.time=10d"
            - "--storage.tsdb.retention.size=0"
            - "--log.level=info"
            - "--log.format=logfmt"
            - "--web.listen-address=:9090"
            - "--web.console.libraries=/opt/bitnami/prometheus/conf/console_libraries"
            - "--web.console.templates=/opt/bitnami/prometheus/conf/consoles"
            - "--web.route-prefix=/"
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: http
              containerPort: 9090
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /-/healthy
              port: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            httpGet:
              path: /-/ready
              port: http
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: config
              mountPath: /opt/bitnami/prometheus/conf
              readOnly: true
            - name: data
              mountPath: /bitnami/prometheus/data
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: config
          configMap:
            name: my-release-prometheus-server
        - name: data
          emptyDir: {}
---
# Source: prometheus/templates/alertmanager/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "my-release-prometheus-alertmanager"
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 0.27.0
    helm.sh/chart: prometheus-1.3.5
    app.kubernetes.io/part-of: prometheus
    app.kubernetes.io/component: alertmanager
spec:
  replicas: 1
  podManagementPolicy: "OrderedReady"
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: prometheus
      app.kubernetes.io/component: alertmanager
  serviceName: my-release-prometheus-alertmanager-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/version: 0.27.0
        helm.sh/chart: prometheus-1.3.5
        app.kubernetes.io/part-of: prometheus
        app.kubernetes.io/component: alertmanager
    spec:
      serviceAccountName: my-release-prometheus-alertmanager
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: prometheus
                    app.kubernetes.io/component: alertmanager
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: alertmanager
          image: docker.io/bitnami/alertmanager:0.27.0-debian-12-r11
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          args:
            - "--config.file=/opt/bitnami/alertmanager/conf/alertmanager.yaml"
            - "--storage.path=/opt/bitnami/alertmanager/data"
            - "--web.listen-address=0.0.0.0:9093"
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: http
              containerPort: 9093
            - name: tcp-cluster
              containerPort: 9094
              protocol: TCP
            - name: udp-cluster
              containerPort: 9094
              protocol: UDP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /-/healthy
              port: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            httpGet:
              path: /-/ready
              port: http
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: config
              mountPath: /opt/bitnami/alertmanager/conf
              readOnly: true
            - name: data
              mountPath: /bitnami/alertmanager/data
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: config
          configMap:
            name: my-release-prometheus-alertmanager
        - name: data
          emptyDir: {}
